--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,14 @@ img {
 }
 
 .container {
+  width: 1158px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   max-width: 1440px;
-  padding: 0;
-  margin: 0;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 
 .link {
@@ -59,12 +64,11 @@ img {
 /*  --------- Header --------- */
 
 .header .container {
-  display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  padding: 26px 156px;
-  border-bottom: 1px solid var(--cornflower, #e7e9fc);
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid var(--cornflower);
 }
 
 .header-navigation {
@@ -86,11 +90,11 @@ img {
 
 .dark {
   color: var(--navyblue);
+  margin-right: 76px;
 }
 
 .header-navigation-list {
   display: flex;
-  padding-left: 76px;
   gap: 40px;
 }
 
@@ -114,7 +118,6 @@ address {
 .adress-list {
   display: flex;
   gap: 40px;
-  flex-grow: 0;
 }
 
 .address-item-link {
@@ -133,13 +136,16 @@ address {
 
 .footer {
   background-color: var(--navyblue);
+  padding: 100px 0;
 }
 
 .footer .container {
-  display: flex;
-  flex-direction: column;
   align-items: flex-start;
-  padding: 102px 1020px 100px 156px;
+}
+
+.footer .header-logo-text {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .cloud {
@@ -151,7 +157,7 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-top: 17px;
+  width: 264px;
 }
 /*   --------- Main content section ---------  */
 
@@ -169,14 +175,12 @@ address {
 
 .hero {
   background-color: var(--navyblue);
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .hero .container {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  padding: 188px 472px;
-  margin-bottom: 120px;
 }
 
 .hero-title {
@@ -186,6 +190,7 @@ address {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  max-width: 496px;
 }
 
 .hero-button {
@@ -199,7 +204,10 @@ address {
   cursor: pointer;
   margin-top: 48px;
   padding: 16px 32px;
+  border: 0;
   border-radius: 4px;
+  max-width: 196px;
+  height: 56px;
 }
 
 .hero-button:hover,
@@ -209,10 +217,9 @@ address {
 
 /*  --------- Main streams section --------- */
 
-.streams .container {
-  display: flex;
-  padding: 0 156px;
-  margin-bottom: 120px;
+.streams {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .visually-hidden {
@@ -232,7 +239,6 @@ address {
   display: inline-flex;
   flex-direction: row;
   gap: 24px;
-  padding: 0;
 }
 
 .streams-item {
@@ -246,7 +252,7 @@ address {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .streams-item-text {
@@ -258,11 +264,11 @@ address {
 
 /*  --------- Our activities section --------- */
 
+.activities {
+  padding-bottom: 120px;
+}
+
 .activities .container {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  margin-bottom: 120px;
 }
 
 .activities-tytle {
@@ -280,19 +286,28 @@ address {
   display: flex;
   flex-direction: row;
   gap: 24px;
-  padding: 0 156px;
+}
+
+.activity-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.activity-item img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 /*  --------- Our team section --------- */
 
 .team {
   background-color: var(--cloud);
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .team .container {
-  display: flex;
   flex-direction: column;
-  padding: 120px 0;
 }
 
 .team-title {
@@ -310,7 +325,6 @@ address {
   display: flex;
   flex-direction: row;
   gap: 24px;
-  padding: 0 156px;
 }
 
 .team-item {
@@ -320,26 +334,34 @@ address {
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
   background-color: var(--white);
   display: inline-flex;
-  padding-bottom: 32px;
+  width: calc((100% - 72px) / 4);
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+}
+
+.team-item img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+.team-item-card {
+  display: flex;
+  flex-direction: column;
+  padding: 32px 0;
+  text-align: center;
 }
 
 .team-item-name {
   color: var(--navyblue);
-  text-align: center;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-top: 32px;
   padding-bottom: 8px;
 }
 
 .team-item-text {
   color: var(--slate);
-  text-align: center;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -347,10 +369,9 @@ address {
 
 /*  --------- Portfolio menu --------- */
 
-.portfolio-menu .container {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 120px;
+.portfolio-menu {
+  padding-top: 96px;
+  padding-bottom: 120px;
 }
 
 .portfolio-menu-list {
@@ -358,8 +379,7 @@ address {
   align-items: flex-start;
   justify-content: center;
   gap: 24px;
-  padding-top: 96px;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .portfolio-menu-button {
@@ -375,7 +395,7 @@ address {
   display: flex;
   padding: 12px 24px;
   border-radius: 4px;
-  border: 1px;
+  border: 1px  solid  var(--cornflower);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
@@ -384,30 +404,44 @@ address {
 .portfolio-menu-button:focus {
   color: var(--white);
   background-color: var(--ocean);
+  border: 1px  solid  transparent;
 }
 
 /*  --------- Main portfolio content --------- */
 
+
 .portfolio-content-list {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 156px;
   row-gap: 48px;
   column-gap: 24px;
 }
 
 .portfolio-content-item {
-  border: 1px solid var(--cornflower);
   width: calc((100% - 48px) / 3);
 }
 
 .portfolio-content-link {
   text-decoration: none;
   display: flex;
-  padding-bottom: 32px;
   flex-direction: column;
   align-items: flex-start;
   flex-shrink: 0;
+}
+
+.portfolio-content-item img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+.portfolio-item-card {
+display: flex;
+width: 100%;
+flex-direction: column;
+padding: 32px 16px;
+  border: 1px solid var(--cornflower);
+  border-top: none;
 }
 
 .portfolio-content-title {
@@ -416,7 +450,7 @@ address {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding: 32px 16px 8px 16px;
+  margin-bottom: 8px;
 }
 
 .portfolio-content-type {
@@ -424,5 +458,4 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding: 0 16px;
 }
