--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,15 @@ li {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
-  width: 1158px;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  max-width: 1440px;
-  padding-left: 15px;
-  padding-right: 15px;
+  max-width: 1158px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
@@ -63,12 +62,15 @@ img {
 
 /*  --------- Header --------- */
 
+.header {
+  border-bottom: 1px solid var(--cornflower);
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
 .header .container {
   flex-direction: row;
   justify-content: space-between;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  border-bottom: 1px solid var(--cornflower);
 }
 
 .header-navigation {
@@ -86,11 +88,12 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 
 .dark {
   color: var(--navyblue);
-  margin-right: 76px;
+  margin-right: 0px;
 }
 
 .header-navigation-list {
@@ -143,7 +146,14 @@ address {
   align-items: flex-start;
 }
 
-.footer .header-logo-text {
+.footer-logo-text {
+  color: var(--iris);
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   display: inline-block;
   margin-bottom: 16px;
 }
@@ -160,16 +170,6 @@ address {
   width: 264px;
 }
 /*   --------- Main content section ---------  */
-
-/* .main-content {
-  display: flex;
-  flex-direction: column;
-  gap: 120px;
-}
-
-.main-content:last-child {
-  margin-bottom: 120px;
-} */
 
 /*  --------- Hero - Main action section --------- */
 
@@ -206,7 +206,7 @@ address {
   padding: 16px 32px;
   border: 0;
   border-radius: 4px;
-  max-width: 196px;
+  min-width: 169px;
   height: 56px;
 }
 
@@ -268,9 +268,6 @@ address {
   padding-bottom: 120px;
 }
 
-.activities .container {
-}
-
 .activities-tytle {
   color: var(--navyblue);
   text-align: center;
@@ -290,12 +287,6 @@ address {
 
 .activity-item {
   width: calc((100% - 48px) / 3);
-}
-
-.activity-item img {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
 }
 
 /*  --------- Our team section --------- */
@@ -357,7 +348,7 @@ address {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .team-item-text {
@@ -395,7 +386,7 @@ address {
   display: flex;
   padding: 12px 24px;
   border-radius: 4px;
-  border: 1px  solid  var(--cornflower);
+  border: 1px solid var(--cornflower);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
@@ -404,11 +395,10 @@ address {
 .portfolio-menu-button:focus {
   color: var(--white);
   background-color: var(--ocean);
-  border: 1px  solid  transparent;
+  border: 1px solid transparent;
 }
 
 /*  --------- Main portfolio content --------- */
-
 
 .portfolio-content-list {
   display: flex;
@@ -429,17 +419,11 @@ address {
   flex-shrink: 0;
 }
 
-.portfolio-content-item img {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
-}
-
 .portfolio-item-card {
-display: flex;
-width: 100%;
-flex-direction: column;
-padding: 32px 16px;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  padding: 32px 16px;
   border: 1px solid var(--cornflower);
   border-top: none;
 }
